# Bitnet-Minimal

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yaml  setup_env.sh
src/: main.rs
